--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "sportsnodeproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/server.js",
-    "start:dev": "nodemon app/server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "guido",
   "license": "ISC",
